--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.20.0
   cloud_firestore: ^4.17.5
+  get_it: ^7.7.0
 
 
 dev_dependencies:
